--- a/MyJournal.html
+++ b/MyJournal.html
@@ -42,12 +42,31 @@
          <p>Check out <a href="http://huffingtonpost.com/">Huffington Post</a>.
             It"s great for getting the latest news.</p>
        </section>
+     </div>
+
+     <div>
+
+       <ul id="d2">
+         <li>
+           <h3>I keep moving forward</h3>
+           <h4>banging my head against the wall</h4>
+           <a href=IMG/baby-bunny.jpg>
+             <img src="IMG/baby-bunny.jpg" alt="baby-bunny">
+             <p>The way I feel right now</p>
+           </a>
+           <li>
+             <p>I have spent soo much time working on the tree house stuff that
+               I get lost in reaching the next goal. At times I even think that
+               I need to spend more time just trying this stuff instead of doing
+               the accomplishments. It's a trap and it makes me feel small and
+               not ready to hop out into the open</p>
+            </li>
+          </a>
+     </div>
 
        <footer>
-
-
          <p>&copy; 2015 Loren Van Wiel</p>
        </footer>
-     </div>
+
    </body>
  </html>
