--- a/index.html
+++ b/index.html
@@ -1,42 +1,72 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-
-  <meta charset="utf-8">
-      <title>Loren VW Journal</title>
+<!Doctype html>
+ <html>
+    <head>
+      <meta charset="utf-8">
+      <title>Loren Van Wiel | Compositor</title>
       <link rel="stylesheet" href="css/normalize.css">
       <link href='http://fonts.googleapis.com/css?family=Neucha|Passero+One' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="css/responsive.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+       <header>
+         <a href="index.html" id="logo">
+          <h1>My Web Foundations Journal</h1>
+          <h2>Loren Van Wiel</h2>
 
-  <title>Loren Van Wiel</title>
-</head>
+         </a>
 
-<body>
-  <header>
-     <h1>Loren's Journal</h1>
-  </header>
+         <nav>
+            <ul>
+              <li><a href="contact.html">contact</a></li>
+              <li><a href="portfolio.html" class="selected">Portfolio</a></li>
+              <li><a href="MY.html">about</a></li>
 
-  <div class="container">
-    <h2>goals</h2>
-    <p>
-      My goal is to learn the basics of creating, styling and launching a web page.
-    </p>
+            </ul>
+         </nav>
 
-    <img src="IMG/IMG_1815.jpg" alt="">
+       </header>
+       <div id="wrapper">
+       <section>
+         <h3>The Journal Begins</h3>
+         <ul id="gallery">
+           <li>
+             <a href="img/IMG_1963.jpg">
+               <img src="img/IMG_1963.jpg" alt="">
+               <p>A picture of my family, my daughters friend, and some Boxtrolls.</p>
+             </a>
+           </li>
+         </ul>
+         <p>I have felt overwhelmed and workind hard on all the tree house stuff.</p>
+         <p>Check out <a href="http://huffingtonpost.com/">Huffington Post</a>.
+            It"s great for getting the latest news.</p>
+       </section>
+     </div>
 
-    <h2>Concerns</h2>
-      <p>
-        Concerns about learning html are not keeping up and missing something
-        relevant.
-      </p>
+     <div>
 
-  </div>
+       <ul id="d2">
+         <li>
+           <h3>I keep moving forward</h3>
+           <h4>banging my head against the wall</h4>
+           <a href=IMG/baby-bunny.jpg>
+             <img src="IMG/baby-bunny.jpg" alt="baby-bunny">
+             <p>The way I feel right now</p>
+           </a>
+           <li>
+             <p>I have spent soo much time working on the tree house stuff that
+               I get lost in reaching the next goal. At times I even think that
+               I need to spend more time just trying this stuff instead of doing
+               the accomplishments. It's a trap and it makes me feel small and
+               not ready to hop out into the open</p>
+            </li>
+          </a>
+     </div>
 
-  <footer>
-   <h1>CopyWrite Loren Van Wiel &copy; 2015</h1>
-  </footer>
+       <footer>
+         <p>&copy; 2015 Loren Van Wiel</p>
+       </footer>
 
-</body>
-
-</html>
+   </body>
+ </html>
