--- a/index.html
+++ b/index.html
@@ -64,6 +64,23 @@
           </a>
      </div>
 
+     <div>
+       <ul>
+         <h3>Good lord</h3>
+         <h4>study study study</h4>
+         <a>
+           <li>
+             <p>Why wont this work. I have knowledge and have done a lot of work
+               understanding things but, I feel a disconnect in what I code and
+               what I am thinking. I go to bed thinking code and think code when
+               I day dream. This is that and that is this. However, I go to
+               implement the thoughts into reality and I get befuddled. Back to
+               studying.</p>
+             </li>
+          </a>
+        </ul>
+      </div>
+
        <footer>
          <p>&copy; 2015 Loren Van Wiel</p>
        </footer>
