--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
          <nav>
             <ul>
               <li><a href="contact.html">contact</a></li>
-              <li><a href="portfolio.html" class="selected">Portfolio</a></li>
+              <li><a href="portfolio.html" /*class="selected"*/>Portfolio</a></li>
               <li><a href="MY.html">about</a></li>
 
             </ul>
          </nav>
 
        </header>
-       <div id="wrapper">
+       <div class="today">
        <section>
          <h3>The Journal Begins</h3>
          <ul id="gallery">
@@ -45,12 +45,11 @@
      </div>
 
      <div>
-
-       <ul id="d2">
+       <ul class="d2">
          <li>
            <h3>I keep moving forward</h3>
            <h4>banging my head against the wall</h4>
-           <a href=IMG/baby-bunny.jpg>
+           <a href=IMG/baby-bunny.jpg class="evero">
              <img src="IMG/baby-bunny.jpg" alt="baby-bunny">
              <p>The way I feel right now</p>
            </a>
@@ -64,11 +63,10 @@
           </a>
      </div>
 
-     <div>
+     <div class="today">
        <ul>
          <h3>Good lord</h3>
          <h4>study study study</h4>
-         <a>
            <li>
              <p>Why wont this work. I have knowledge and have done a lot of work
                understanding things but, I feel a disconnect in what I code and
@@ -77,9 +75,30 @@
                implement the thoughts into reality and I get befuddled. Back to
                studying.</p>
              </li>
-          </a>
         </ul>
       </div>
+
+      <ul class="d2">
+        <li>
+          <h3>Treehouse is working me over</h3>
+          <h4>Endless notes</h4>
+          <a href=IMG/IMG_1815.jpg class="evero">
+            <img src="IMG/IMG_1815.jpg"  alt="loren and his dog on a beach">
+            <p>loren and his dog on a beach</p>
+          </a>
+          <li>
+            <p>I have made it through all the css tutorials at this point on
+            treehouse. I like them but I do think that their estimations for the
+            time frame is off. Sure you could do them in the alotment that they
+            say, but not really. You constantly stop write stuff down, go back over
+            material, think about it, and test it. All of that adds tons of time
+            to the "watching." I still feel like I'm on a sinking ship. However,
+            now I have a couple of planks of wood to hold onto. Its not a life raft
+            or even a jacket, but at least it something.</p>
+           </li>
+         </a>
+    </div>
+
 
        <footer>
          <p>&copy; 2015 Loren Van Wiel</p>
