--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
          <nav>
             <ul>
-              <li><a href="contact.html">contact</a></li>
-              <li><a href="portfolio.html" /*class="selected"*/>Portfolio</a></li>
+              <li><a href="mailto:loren.vanw@gmail.com">contact</a></li>
+              <li><a href="portfolio.html" />Portfolio</a></li>
               <li><a href="MY.html">about</a></li>
 
             </ul>
@@ -33,7 +33,7 @@
          <ul id="gallery">
            <li>
              <a href="img/IMG_1963.jpg">
-               <img src="img/IMG_1963.jpg" alt="">
+               <img src="img/IMG_1963.jpg" alt="" class= "bun">
                <p>A picture of my family, my daughters friend, and some Boxtrolls.</p>
              </a>
            </li>
@@ -49,7 +49,7 @@
          <li>
            <h3>I keep moving forward</h3>
            <h4>banging my head against the wall</h4>
-           <a href=IMG/baby-bunny.jpg class="evero">
+           <a href=IMG/baby-bunny.jpg class="bun">
              <img src="IMG/baby-bunny.jpg" alt="baby-bunny">
              <p>The way I feel right now</p>
            </a>
@@ -63,8 +63,9 @@
           </a>
      </div>
 
-     <div class="today">
-       <ul>
+     <div class="d2">
+       <section>
+       <ul id="eat">
          <h3>Good lord</h3>
          <h4>study study study</h4>
            <li>
@@ -73,9 +74,11 @@
                what I am thinking. I go to bed thinking code and think code when
                I day dream. This is that and that is this. However, I go to
                implement the thoughts into reality and I get befuddled. Back to
-               studying.</p>
-             </li>
+               studying.
+             </p >
+           </li>
         </ul>
+      </section>
       </div>
 
       <ul class="d2">
@@ -98,6 +101,24 @@
            </li>
          </a>
     </div>
+
+    <div>
+      <ul class="d3">
+        <li>
+          <h3>Feeling Flustered</h3>
+          <h4>I had not gotten as far as I wanted</h4>
+          <a href=IMG/sadness.jpg class="work">
+            <img src="IMG/sadness.jpg" alt="frustration">
+            <p>After class I felt flustered</p>
+          </a>
+          <li>
+            <p>I had spent a lot of time working on getting things rolling with my team and felt like I had gotten pretty far. I was wrong and it made me flustered. Up until presentation I was feeling pretty good. I knew what we had made had flaws and needed work. To me it had been a learning and growing exersize which I had done quite a bit of. I was having fun and after class I was not having fun. I felt like crap.</p>
+           </li>
+         </a>
+    </div>
+
+
+
 
 
        <footer>
